# versionamento_ada_mod02

./: .env  .env.test  .flake8  .gitignore  LICENSE  README.md  alembic.ini  conftest.py  pyproject.toml  user_data_ec2.sh
.github/workflows/: develop_pipeline.yml  main_pipeline.yml
alembic/: env.py
alembic/versions/: 0dd8c8fdc031_create_users_table.py  27b2c8fde1c3_create_pets_plan_table.py  437aeceee1d5_create_token_black_list_table.py  55e798c542d1_create_pets_table.py  65a99f6eccf2_initial_migration.py  6f8d7e0c1bec_create_pets_plan_pet_table.py  6f8d7e0c1bec_merge_heads.py  de4503478872_create_rbac_tables.py
app/: main.py
app/api/v1/endpoints/: auth.py  groups.py  pets.py  pets_plan.py  plans.py  roles.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  associations.py  group.py  pet.py  pet_plan.py  policy.py  role.py  token_black_list.py  user.py
app/schemas/: auth.py  group.py  pets.py  pets_plan.py  plan.py  role.py  user.py
app/services/: auth_service.py  blacklist_token_service.py  group_service.py  logout_service.py  pets.py  pets_plan_service.py  pets_service.py  plans_service.py  role_service.py  user_service.py
database/: petplan-test.db  petplan.db
docs/: CONTRIBUTING.md
tests/: test_auth.py  test_db.py  test_groups.py  test_pets.py  test_plan_pets.py  test_plans.py  test_roles.py  test_users.py
