[tool.poetry]
name = "test-pipeline"
version = "0.1.0"
description = ""
authors = ["Neto6391 <neto6391@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
flake8 = "^7.1.1"
httpx = "^0.27.2"
requests = "^2.32.3"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.33"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
