[tool.poetry]
name = "test-pipeline"
version = "0.1.0"
description = ""
authors = ["Neto6391 <neto6391@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
flake8 = "^7.1.1"
httpx = "^0.27.2"
requests = "^2.32.3"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.33"
alembic = "^1.13.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.8.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
databases = {extras = ["sqlite"], version = "^0.9.0"}
pydantic-settings = "^2.4.0"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
